avro_derive/tests/ui/avro_rs_373_remote.stderr
error: AvroSchema derive does not support the Serde `remote` attribute
  --> tests/ui/avro_rs_373_remote.rs:27:1
   |
27 | #[serde(remote = "Foo")]
   | ^
